<resources>
    <string name="app_name">Barikoi Demo</string>
    <string name="title_activity_main_demo">Barikoi Demo</string>
    <string name="title_activity_check_out">Checkout Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">www.barikoi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoidGF1ZmlxdXIiLCJhIjoiY2psYnY3YTgwNGppdTNscXA0ZDFlMDgyYSJ9.353rlwW3mCw7N2KFSfObSQ</string>

    <!--<string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>-->
    <string name="search_autocomplete">Search Autocomplete</string>
    <string name="reverge_geo">Reverse Geo</string>
    <string name="rupantor">Rupantor</string>
    <string name="Nearby_Place">Nearby Places</string>
    <string name="Nearby_Address">Nearby Addresses</string>
    <string name="CheckOut">Checkout Demo</string>
    <string name="navigation">Navigation</string>
    <string name="location">Find Location</string>
    <string name="Name">Name</string>
    <string name="Phone">Contact number</string>
    <string name="InputAddress">Enter address</string>
    <string name="Area">Area</string>
    <string name="City">City</string>
    <string name="PostCode">Post Code</string>
    <string name="Country">Country</string>
    <string name="inputsource">Source Address</string>
    <string name="inputdestination">Destination Address</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="km">KM</string>
    <string name="mins">mins</string>

    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>

    <string name="couldnot_connect">Could not connect</string>
    <string name="prob_change_server">Problem or change in server, please wait and try again</string>
    <string name="unknown_error">Unknown Error Occured</string>


    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Bangladesh</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>


    //Nearby Places
    <string name="food">Food</string>
    <string name="religious">Religious</string>
    <string name="attractions">Attractions</string>
    <string name="more">More</string>
    <string name="currentAddress">Current Address</string>

    <string name="name_of_the_place">Name of the place/business/house</string>

    //Activity More Place
    <string name="hospital">Hospital</string>
    <string name="bank">Bank</string>
    <string name="education">Education</string>
    <string name="policestation">Police Station</string>
    <string name="hotel">Hotel</string>
    <string name="toilet">Toilet</string>
    <string name="fuel">Fuel</string>
    <string name="bkash">BKash</string>
    <string name="ucash">UCash</string>
    <string name="surecash">SureCash</string>
    <string name="parking">Parking</string>
    <string name="generalStore">General Store</string>
    <string name="market">Market</string>
    <string name="pharmacy">Pharmacy</string>


    <string name="tvhintcheckbox">Tick the bar for enabling Geo-Search</string>


    <string name="couldnt_find_what_you_were_looking_for_let_us_know">Could not find what you were looking for? let us know.</string>
</resources>
