<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/search_autocomplete" />
        <item
            android:id="@+id/nav_reversegeo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/reverge_geo" />
        <item
            android:id="@+id/nav_rupantor"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/rupantor" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Nearby" />
        <item
            android:id="@+id/nav_checkout"
            android:icon="@drawable/ic_menu_checkout"
            android:title="@string/CheckOut" />
    </group>



</menu>
